--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,7 +3,7 @@ name: Deploy to AWS EC2
 on:
   push:
     branches:
-      - main # Change to your default branch
+      - main # Cambia al nombre de tu rama principal si es diferente
 
 jobs:
   build:
@@ -59,7 +59,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa $USER@$HOST << 'EOF'
             sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/gateway-store:latest
-            sudo docker stop ff237f3f4a9b || true
-            sudo docker rm ff237f3f4a9b || true
-            sudo docker run -d --name ff237f3f4a9b -p 80:8080 ${{ secrets.DOCKER_USERNAME }}/gateway-store:latest
+            sudo docker stop gateway-store || true
+            sudo docker rm gateway-store || true
+            sudo docker run -d --name gateway-store -p 80:8080 ${{ secrets.DOCKER_USERNAME }}/gateway-store:latest
           EOF
