update dockerfile && ccid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=gateway-store
 
 spring.graphql.graphiql.enabled=true
 
-server.port=9090
+# server.port=9090
 
 graphiql.enabled=true
 graphiql.mapping=/graphiql
