--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,36 +1,65 @@
-name: Deploy to EC2
+name: Deploy to AWS EC2
 
 on:
   push:
     branches:
-      - main  # o la rama de tu preferencia
+      - main  # Change to your default branch
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.7.1
-      with:
-        ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
-    - name: Docker login
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
 
-    - name: Pull Docker image from Docker Hub
-      run: docker pull alehf11/gateway-spring:2.0
-      # Reemplaza usuario/mi-repositorio:tag con tu imagen de Docker Hub
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Run Docker container on EC2
-      run: |
-        ssh -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
-          docker stop gateway-container || true
-          docker rm gateway-container || true
-          docker run -d --name gateway-container -p 8080:8080 alehf11/gateway-spring:2.0
-        EOF
-      # Reemplaza ec2-user@your-ec2-public-dns-name con la dirección DNS de tu instancia EC2
-      # Asegúrate de ajustar el nombre del contenedor, los puertos y el nombre de la imagen según tu configuración.
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/gateway-spring:2.0
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Install SSH Client
+        run: sudo apt-get install -y openssh-client
+
+      - name: Deploy to EC2
+        env:
+          PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+          HOST: ${{ secrets.EC2_HOST }}
+          USER: ${{ secrets.EC2_USER }}      
+        run: |
+          mkdir -p ~/.ssh
+          echo "$PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa $USER@$HOST << 'EOF'
+          sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/gateway-spring:2.0
+          sudo docker stop gateway-container || true
+          sudo docker rm gateway-container || true
+          sudo docker run -d --name gateway-container -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/gateway-spring:2.0
+          EOF
